# studibudget

./: README.md
docs/: CNAME
studibudget-cli/: .gitignore  Cargo.toml  LICENSE  README.md  out.csv
studibudget-cli/.github/workflows/: main.yml
studibudget-cli/docs/: downloads.html  index.html
studibudget-cli/src/: main.rs
studibudget-cli/website/: CNAME  downloads.html  index.html
