[package]
name = "studibudget"
version = "0.1.0"
edition = "2021"
authors = ["Brian Doctor <brianmatovu51@gmail.com>"]
description = "A student-friendly CLI to track income, expenses, and savings; export CSV; and compute tuition runway."
license = "MIT"
repository = "https://github.com/your-username/studibudget"
readme = "README.md"
keywords = ["cli","budget","students","finance"]

[dependencies]
clap = { version = "4.5.4", features=["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features=["serde"] }
directories = "5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"
